# Game-server-demo

./: .gitignore  CMakeLists.txt  README.md  server.cpp
src/: Buffer.cpp  Buffer.h  ConnectObj.cpp  ConnectObj.h  ConnetObj.h  IDisposable.h  MessageHandler.h  MessageList.h  MessageListBase.h  NetworkBase.cpp  NetworkBase.h  NetworkConnecter.cpp  NetworkConnecter.h  NetworkListener.cpp  NetworkListener.h  Packet.cpp  Packet.h  Server.cpp  Server.h  ServerApp.cpp  ServerApp.h  Singleton.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h  ThreadObj.h  app_PCH.h  common.h  ecslibserver.h  libserver.h
src/Disposal/: IDisposable.h
src/Network/: ConnetObj.h  NetworkListener.h
src/NetworkBase/: NetworkBase.cpp  NetworkBase.h
src/app/: Account.cpp  Account.h
src/ecslib/: BufferBase.cpp  BufferBase.h  ComponentBase.cpp  ComponentBase.h  ConnectObj.cpp  ConnectObj.h  Console.h  ConsoleBase.cpp  ConsoleBase.h  EntitySystem.cpp  EntitySystem.h  IComponent.h  IPoolObject.h  IResetable.h  MessageHandler.cpp  MessageHandler.h  MessageList.cpp  MessageList.h  MessageListBase.cpp  MessageListBase.h  NetworkBase.cpp  NetworkBase.h  NetworkConnecter.cpp  NetworkConnecter.h  NetworkListener.cpp  NetworkListener.h  ObjectPool.cpp  ObjectPool.h  Singleton.h  StateMachineBase.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h
src/ecslib/protobuf/: msg.proto  proto_msg_id.pb.h
src/lib/: Buffer.cpp  BufferBase.cpp  BufferBase.h  ConnectObj.cpp  ConnectObj.h  IDisposable.h  MessageHandler.cpp  MessageHandler.h  MessageList.cpp  MessageList.h  MessageListBase.h  NetworkBase.cpp  NetworkBase.h  NetworkConnecter.cpp  NetworkConnecter.h  NetworkListener.cpp  NetworkListener.h  Packet.h  Server.h  ServerApp.h  StateMachineBase.h  Thread.cpp  Thread.h  ThreadManager.cpp  ThreadManager.h  ThreadObj.h
src/lib/protobuf/: msg.pb.cc  msg.pb.h  proto_msg_id.pb.cc  proto_msg_id.pb.h
src/protobuf/: msg.pb.cc  msg.pb.h  msg.proto  proto.h  proto_msg_id.pb.cc  proto_msg_id.pb.h  proto_msg_id.proto
src/robot/: Robot.cpp  Robot.h  RobotStates.cpp  RobotStates.h
test/: TestMsgHandler.cpp  a.out  accountverifyclient.cpp  accountverifyserver.cpp  buffer_test.cpp  buffertest.cpp  client.cpp  common_test.cpp  console_test.cpp  entitysystem_test.cpp  network_connect_test.cpp  network_listen_test.cpp  networkclasstest.cpp  newlistener_test.cpp  objectpool_test.cpp  robot.cpp  server.cpp  serverapp_test.cpp  singleton_test.cpp  statemachine_test.cpp  thread_test.cpp
test/message_list_test/: TestMsgHandler.cpp  robot.cpp
